--- a/src/styles/todayclimate.css
+++ b/src/styles/todayclimate.css
@@ -7,6 +7,7 @@ h5 {
   padding: 0.2rem;
   overflow-x: scroll;
   overflow-y: hidden;
+  opacity: 0.8;
 }
 
 .top-container,
@@ -56,200 +57,32 @@ h5 {
   font-size: 0.9rem;
 }
 
-@media only screen and (max-width: 1024px) {
-  .today_at-box {
-    position: relative;
-    left: 3rem;
-    margin-left: 1rem;
-    width: 45rem;
-  }
-
-  h5 {
-    font-size: 18px;
-  }
-
-  .top-container,
-  .bottom-container {
-    padding: 0.4rem;
-  }
-
-  .all-climate,
-  .all-wind {
-    padding: 1.2rem;
-    margin: 0rem 0.4rem;
-  }
-
-  .climate-time,
-  .wind-time {
-    font-size: 0.8rem;
-  }
-
-  .today-temperature,
-  .today-wind {
-    width: 65px;
-    height: 65px;
-  }
-
-  .climate-temp,
-  .windspeed {
-    font-size: 0.8rem;
+@media (max-width: 575.98px) {
+  .today_at-box{
+    display: none;
   }
 }
 
-@media only screen and (max-width: 768px) {
-  .today_at-box {
-    position: absolute;
-    bottom: -39.5rem;
-    left: 0rem;
-  }
-
-  h5 {
-    font-size: 18px;
-  }
-
-  .top-container,
-  .bottom-container {
-    padding: 0.4rem;
-  }
-
-  .all-climate,
-  .all-wind {
-    padding: 1.2rem;
-    margin: 0rem 0.4rem;
-  }
-
-  .climate-time,
-  .wind-time {
-    font-size: 0.8rem;
-  }
-
-  .today-temperature,
-  .today-wind {
-    width: 65px;
-    height: 65px;
-  }
-
-  .climate-temp,
-  .windspeed {
-    font-size: 0.8rem;
+@media (min-width: 576px) {
+  .today_at-box{
+    display: none;
   }
 }
 
-@media only screen and (max-width: 426px) {
-  .today_at-box {
-    position: absolute;
-    top: 94rem;
-    left: 0rem;
-    width: 24.8rem;
-  }
-
-  h5 {
-    font-size: 18px;
-  }
-
-  .top-container,
-  .bottom-container {
-    padding: 0.4rem;
-  }
-
-  .all-climate,
-  .all-wind {
-    padding: 1.2rem;
-    margin: 0rem 0.4rem;
-  }
-
-  .climate-time,
-  .wind-time {
-    font-size: 0.8rem;
-  }
-
-  .today-temperature,
-  .today-wind {
-    width: 65px;
-    height: 65px;
-  }
-
-  .climate-temp,
-  .windspeed {
-    font-size: 0.8rem;
+@media (min-width: 768px) {
+  .today_at-box{
+    display: none;
   }
 }
 
-@media only screen and (max-width: 376px) {
-  .today_at-box {
-    position: absolute;
-    top: 88rem;
-    width: 20.4rem;
-  }
-
-  h5 {
-    font-size: 18px;
-  }
-
-  .top-container,
-  .bottom-container {
-    padding: 0.4rem;
-  }
-
-  .all-climate,
-  .all-wind {
-    padding: 1.2rem;
-    margin: 0rem 0.4rem;
-  }
-
-  .climate-time,
-  .wind-time {
-    font-size: 0.8rem;
-  }
-
-  .today-temperature,
-  .today-wind {
-    width: 55px;
-    height: 55px;
-  }
-
-  .climate-temp,
-  .windspeed {
-    font-size: 0.8rem;
+@media (min-width: 992px) {
+  .today_at-box{
+    display: none;
   }
 }
 
-@media only screen and (max-width: 320px) {
-  .today_at-box {
-    position: absolute;
-    top: 84rem;
-    left: 0rem;
-    width: 18rem;
-  }
-
-  h5 {
-    font-size: 18px;
-  }
-
-  .top-container,
-  .bottom-container {
-    padding: 0.4rem;
-  }
-
-  .all-climate,
-  .all-wind {
-    padding: 1.2rem;
-    margin: 0rem 0.4rem;
-  }
-
-  .climate-time,
-  .wind-time {
-    font-size: 0.8rem;
-  }
-
-  .today-temperature,
-  .today-wind {
-    width: 45px;
-    height: 45px;
-  }
-
-  .climate-temp,
-  .windspeed {
-    font-size: 0.7rem;
+@media (min-width: 1200px) {
+  .today_at-box{
+    display: none;
   }
 }
