--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: rgb(233, 233, 233);
+  background-image: url(../src/assets/images/sky_bg.jpg);
+  background-size: cover;
   color: rgb(45, 45, 45);
 }
 
