--- a/src/styles/forecast.css
+++ b/src/styles/forecast.css
@@ -7,6 +7,7 @@ h6 {
   padding: 1rem;
   border-radius: 10px;
   background-size: cover;
+  background-repeat: no-repeat;
   box-shadow: 6px 5px 4px rgba(0, 0, 0, 0.3);
 }
 
@@ -36,167 +37,182 @@ h6 {
 }
 
 .forecast-days span {
-  margin-left: 0.5rem;
   font-size: 15px;
   font-weight: 600;
   color: var(--sub-text);
 }
 
-@media only screen and (max-width: 1024px) {
-  h6 {
-    margin-bottom: 1rem;
-  }
-
-  .forecast-container {
-    width: 125%;
-    padding: 0.7rem;
-  }
-
-  .forecast-days {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 0.8rem;
-  }
-
-  .image-temp img {
-    width: 1.5rem;
-    height: 1.5rem;
-  }
-
-  .image-temp h5 {
-    font-size: 0.8rem;
-    margin-left: 0.5rem;
-  }
-
-  .forecast-days span {
-    margin-left: 0.2rem;
-    font-size: 12px;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .forecast-box {
-    width: 18rem;
+@media (max-width: 575.98px) {
+  .forecast-box{
+    width: 95%;
+    border-radius: 10px;
     position: absolute;
-    top: 3.5rem;
-    left: 24rem;
-    height: 13rem;
+    top: 60rem;
+    left: 0.5rem;
+    height: fit-content;
   }
 
   .forecast-container {
-    height: 12.2rem;
+    height: 15rem;
+    border-radius: 10px;
     overflow-y: scroll;
   }
 
   .forecast-days {
+    align-items: center;
+  }
+
+  .desc{
     display: flex;
-    justify-content: space-around;
-    margin-top: 0.8rem;
+    justify-content: space-between;
+    margin-left: 2rem;
+  }
+
+  .image-temp img {
+    width: 2.5rem;
+    height:2.5rem;
+  }
+  
+  .image-temp h5 {
+    font-size: 1rem;
+    margin-right: .5rem;
+  }
+  
+  .forecast-days span {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 576px) {
+  .forecast-box{
+    width: 85%;
+    border-radius: 10px;
+    height: 80%;
+  }
+
+  .forecast-container {
+    height: 47.5%;
+    border-radius: 10px;
+    overflow-y: scroll;
+  }
+
+  .forecast-days {
+    align-items: center;
+    padding: 0.2rem;
+  }
+
+  .desc{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 0.5rem;
+  }
+
+  .image-temp img {
+    width: 2.3rem;
+    height:2.3rem;
+  }
+  
+  .image-temp h5 {
+    font-size: 0.9rem;
+    margin-right: .5rem;
+  }
+  
+  .forecast-days span {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 768px) {
+  .forecast-box{
+    position: relative;
+    top: 0rem;
+    left: 0rem;
+    width: 100%;
+    height: 60%;
+    border-radius: 10px;
+  }
+
+  .forecast-container {
+    height: 65%;
+    background-position-y: 0rem;
+    overflow-y: scroll;
+  }
+
+  .desc{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 1rem;
   }
 
   .image-temp img {
     width: 1.8rem;
     height: 1.8rem;
-    margin-bottom: 0.5rem;
   }
-
+  
   .image-temp h5 {
-    font-size: 1.2rem;
-    margin-left: 0.5rem;
-    color: var(--main-text);
-  }
-
-  .forecast-days span {
-    margin-left: 0.5rem;
-    font-size: 15px;
-    color: var(--sub-text);
-  }
-}
-
-@media only screen and (max-width: 426px) {
-  .forecast-box {
-    width: 19.5rem;
-    position: absolute;
-    top: 22rem;
-    left: 1rem;
-    height: fit-content;
-  }
-
-  h6 {
-    margin-bottom: 1rem;
-  }
-
-  .forecast-container {
-    padding: 0.2rem;
-    height: fit-content;
+    font-size: 1rem;
+    margin-right: .5rem;
   }
 
   .forecast-days {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 0.8rem;
+    padding: 0.5rem;
   }
-
-  .image-temp img {
-    width: 3rem;
-    height: 3rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .image-temp h5 {
-    font-size: 1.3rem;
-    margin-left: 0.5rem;
-  }
-
+  
   .forecast-days span {
-    margin-left: 0.5rem;
-    font-size: 16px;
+    font-size: 13px;
   }
-}
+} 
 
-@media only screen and (max-width: 376px) {
-  .forecast-box {
-    width: 16.5rem;
-    position: absolute;
-    top: 22rem;
-    left: 1rem;
-    height: fit-content;
+@media (min-width: 992px) {
+  .forecast-box{
+    width: 100%;
+    height: 64%;
   }
 
   .image-temp img {
-    width: 2.8rem;
-    height: 2.8rem;
+    width: 1.8rem;
+    height: 1.8rem;
   }
-
+  
   .image-temp h5 {
-    font-size: 1.1rem;
+    font-size: 1rem;
+    margin-right: .5rem;
   }
 
+  .desc{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 1rem;
+  }
+  
+  
   .forecast-days span {
     font-size: 15px;
   }
-}
+} 
 
-@media only screen and (max-width: 320px) {
-  .forecast-box {
-    width: 14.3rem;
-    position: absolute;
-    top: 21rem;
-    left: 1rem;
-    height: fit-content;
+@media (min-width: 1200px) {
+  .forecast-box{
+    width: 120%;
+    
   }
 
   .image-temp img {
     width: 2.5rem;
     height: 2.5rem;
   }
-
+  
   .image-temp h5 {
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 
-  .forecast-days span {
+  .desc{
+    display: flex;
+    justify-content: space-between;
+    margin-right: 1.5rem;
+  }
+  
+  .desc span {
     font-size: 14px;
   }
 }
