--- a/src/styles/highlight.css
+++ b/src/styles/highlight.css
@@ -32,15 +32,21 @@ h4 {
   text-shadow: 6px 5px 3px rgba(0, 0, 0, 0.3);
 }
 
-.top-left-head h6 {
+.top-left-head {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.top-left-head h6,
+.top-right-head h6 {
   color: var(--text);
 }
 
 .top-left-head span {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 20%;
+  height: fit-content;
+  padding: 0rem 0.5rem;
+  text-align: center;
   font-weight: 500;
   border-radius: 20px;
   color: black;
@@ -48,16 +54,12 @@ h4 {
   font-size: 14px;
 }
 
-.top-left-head {
-  display: flex;
-  justify-content: space-between;
-}
-
 /* Air Pollution */
 
 .air-measure {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   padding: 1.5rem 1rem 0 0;
 }
 
@@ -90,10 +92,6 @@ h4 {
   text-shadow: 6px 5px 3px rgba(0, 0, 0, 0.3);
 }
 
-.top-right-head {
-  color: var(--text);
-}
-
 .rise-set-time {
   display: flex;
   justify-content: space-evenly;
@@ -108,6 +106,7 @@ h4 {
 .sunrise,
 .sunset {
   display: flex;
+  align-items: center;
 }
 
 .icon {
@@ -158,7 +157,7 @@ h4 {
 .wind-value {
   display: flex;
   justify-content: space-between;
-  align-items: start;
+  align-items: center;
 }
 
 .humidity h5,
@@ -193,91 +192,110 @@ h4 {
   font-weight: 300;
 }
 
-@media only screen and (max-width: 1024px) {
+@media (max-width: 575.98px) {
   .highlights {
-    position: relative;
-    left: 3rem;
-    width: 45.5rem;
-    margin-left: 1rem;
+    width: 95%;
+    position: absolute;
+    top: 20rem;
+    right: 0.5rem;
   }
-
-  /* common */
-
+  
+  /* Common */
+  
   h4 {
     font-size: 18px;
   }
-
+  
   /* Top Box */
-
+  
   .top-highlights {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: 1rem;
   }
-
+  
   /* Top Box Head */
-
-  .top-left-head h6 {
-    font-size: 14px;
+  
+  .air-details {
+    width: 100%;
   }
-
+  
+  .top-left-head h6,
+  .top-right-head h6 {
+    font-size: 1rem;
+  }
+  
   .top-left-head span {
-    width: 25%;
-    height: 1.3rem;
+    width: 20%;
     font-weight: 500;
     font-size: 12px;
   }
-
+  
   /* Air Pollution */
-
+  
   .wind-icon {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
-
+  
+  .air-value {
+    text-align: center;
+  }
+  
   .air-value span {
-    font-size: 10px;
+    font-size: 9px;
+    font-weight: 500;
   }
   .air-value h3 {
-    font-size: 18px;
+    font-size: 16px;
   }
-
+  
   /* SunRise & Sunset Time */
-  .icon {
-    font-size: 3rem;
+  
+  .sun-rise_set {
+    width: 100%;
   }
-
+  
+  .rise-set-time {
+    padding: 0rem;
+  }
+  
+  .icon {
+    font-size: 2.5rem;
+  }
+  
   .sunrise-time,
   .sunset-time {
-    margin-left: 1rem;
+    margin-left: 0.2rem;
   }
-
+  
   .sunrise-time span,
   .sunset-time span {
-    font-size: 12px;
+    font-size: 11px;
+    font-weight: 400;
   }
   .sunrise-time h3,
   .sunset-time h3 {
-    font-size: 1.1rem;
+    font-size: 1rem;
+    font-weight: 400;
   }
-
+  
   /* Bottom Box */
-
+  
   .bottom-higlights {
-    margin-top: 0.5rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0.5rem;
+    justify-content: center;
   }
-
+  
   .humidity,
   .pressure,
   .visibility,
   .feels-like,
   .wind {
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-radius: 10px;
-    width: 19%;
+    width: 100%;
   }
-
+  
   .humidity h5,
   .pressure h5,
   .visibility h5,
@@ -285,80 +303,209 @@ h4 {
   .wind h5 {
     font-size: 14px;
   }
-
+  
   .logo {
     font-size: 2rem;
   }
-
+  
   .image-icon {
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
   }
-
+  
   .hum-value span,
   .pressure-value span,
   .visi-value span,
   .feels-like span {
-    font-size: 1.3rem;
+    font-size: 1rem;
   }
-
+  
   .wind span {
     font-size: 1rem;
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media (min-width: 576px) {
   .highlights {
-    position: absolute;
-    top: 19rem;
-    left: 0rem;
+    width: 100%;
+    position: relative;
+    top: 1rem;
+    right: 0rem;
   }
-}
-
-@media only screen and (max-width: 426px) {
-  .highlights {
-    background-image: url("../assets/images/highlightsm.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 24.8rem;
-    position: absolute;
-    top: 54rem;
-    right: 19.8rem;
+  
+  /* Common */
+  
+  h4 {
+    font-size: 18px;
   }
-
+  
   /* Top Box */
-
+  
   .top-highlights {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
+  }
+  
+  /* Top Box Head */
+  
+  .air-details {
+    width: 100%;
+  }
+  
+  .top-left-head h6,
+  .top-right-head h6 {
+    font-size: 1rem;
+  }
+  
+  .top-left-head span {
+    width: 20%;
+    font-weight: 500;
+    font-size: 12px;
+  }
+  
+  /* Air Pollution */
+  
+  .wind-icon {
+    font-size: 2.5rem;
+  }
+  
+  .air-value {
+    text-align: center;
+  }
+  
+  .air-value span {
+    font-size: 9px;
+    font-weight: 500;
+  }
+  .air-value h3 {
+    font-size: 16px;
+  }
+  
+  /* SunRise & Sunset Time */
+  
+  .sun-rise_set {
+    width: 100%;
+  }
+  
+  .rise-set-time {
+    padding: 0rem;
+  }
+  
+  .icon {
+    font-size: 2.5rem;
+  }
+  
+  .sunrise-time,
+  .sunset-time {
+    margin-left: 0.2rem;
+  }
+  
+  .sunrise-time span,
+  .sunset-time span {
+    font-size: 11px;
+    font-weight: 400;
+  }
+  .sunrise-time h3,
+  .sunset-time h3 {
+    font-size: 1rem;
+    font-weight: 400;
+  }
+  
+  /* Bottom Box */
+  
+  .bottom-higlights {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0.5rem;
+    justify-content: center;
+  }
+  
+  .humidity,
+  .pressure,
+  .visibility,
+  .feels-like,
+  .wind {
+    width: 100%;
+  }
+  
+  .humidity h5,
+  .pressure h5,
+  .visibility h5,
+  .feels-like h5,
+  .wind h5 {
+    font-size: 14px;
+  }
+  
+  .logo {
+    font-size: 2rem;
+  }
+  
+  .image-icon {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .hum-value span,
+  .pressure-value span,
+  .visi-value span,
+  .feels-like span {
+    font-size: 1rem;
+  }
+  
+  .wind span {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .highlights {
+    width: 64%;
+    position: relative;
+    top: 1rem;
+    right: 7rem;
+  }
+  
+  /* Common */
+
+  h4 {
+    font-size: 22px;
   }
 
   /* Top Box Head */
 
   .air-details {
     width: 100%;
-    margin-bottom: 0.5rem;
-  }
-
-  .top-left-head h6 {
-    font-size: 14px;
   }
 
   .top-left-head span {
-    width: 25%;
-    font-size: 13px;
+    width: 20%;
+    text-align: center;
+    height: fit-content;
+    font-size: 14px;
   }
+
   /* Air Pollution */
 
+  .air-measure {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 1rem 1rem 0 0;
+  }
+
   .wind-icon {
-    font-size: 3.5rem;
+    font-size: 4rem;
+  }
+
+  .air-value {
+    text-align: center;
   }
 
   .air-value span {
-    font-size: 11px;
+    font-size: 12px;
   }
   .air-value h3 {
-    font-size: 25px;
+    font-size: 30px;
   }
 
   /* SunRise & Sunset Time */
@@ -368,39 +515,35 @@ h4 {
   }
 
   .rise-set-time {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .sunset {
-    margin-left: 1rem;
-  }
-
-  .top-right-head h6 {
-    font-size: 14px;
+    padding: 1.5rem 1rem 0 0;
   }
 
   .icon {
-    font-size: 3.3rem;
+    font-size: 3.8rem;
   }
 
   .sunrise-time,
   .sunset-time {
-    margin-left: 0.2rem;
+    margin-left: 1rem;
+  }
+
+  .sunrise-time span,
+  .sunset-time span {
+    font-size: 14px;
+    font-weight: 500;
   }
   .sunrise-time h3,
   .sunset-time h3 {
-    font-size: 1.3rem;
-    font-weight: 300;
+    font-size: 1.6rem;
+    font-weight: 400;
   }
 
   /* Bottom Box */
 
   .bottom-higlights {
+    width: fit-content;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 0.5rem;
   }
 
   .humidity,
@@ -417,179 +560,87 @@ h4 {
   .visibility h5,
   .feels-like h5,
   .wind h5 {
-    font-size: 14px;
+    font-size: 16px;
   }
 
   .logo {
-    font-size: 2rem;
+    font-size: 2.6rem;
   }
 
   .image-icon {
-    width: 38px;
-    height: 38px;
+    width: 40px;
+    height: 40px;
   }
 
   .hum-value span,
   .pressure-value span,
   .visi-value span,
   .feels-like span {
-    font-size: 1.5rem;
-    font-weight: 300;
-  }
-
-  .wind span {
     font-size: 1.4rem;
-    font-weight: 300;
-  }
-}
-
-@media only screen and (max-width: 376px) {
-  .highlights {
-    background-image: url("../assets/images/highlightsm.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 20.5rem;
-    position: absolute;
-    top: 52rem;
-  }
-
-  .top-left-head h6 {
-    font-size: 12px;
-  }
-
-  .top-left-head span {
-    font-size: 11px;
-  }
-  /* Air Pollution */
-
-  .wind-icon {
-    font-size: 2.8rem;
-  }
-
-  .air-value span {
-    font-size: 8px;
-  }
-  .air-value h3 {
-    font-size: 18px;
-  }
-
-  /* SunRise & Sunset Time */
-
-  .top-right-head h6 {
-    font-size: 12px;
-  }
-
-  .icon {
-    font-size: 2.4rem;
-  }
-
-  .sunrise-time h3,
-  .sunset-time h3 {
-    font-size: 1rem;
-  }
-
-  /* Bottom Box */
-
-  .humidity h5,
-  .pressure h5,
-  .visibility h5,
-  .feels-like h5,
-  .wind h5 {
-    font-size: 12px;
-  }
-
-  .logo {
-    font-size: 1.5rem;
-  }
-
-  .image-icon {
-    width: 32px;
-    height: 32px;
-  }
-
-  .hum-value span,
-  .pressure-value span,
-  .visi-value span,
-  .feels-like span {
-    font-size: 1rem;
   }
 
   .wind span {
-    font-size: 0.9rem;
+    font-size: 1.5rem;
   }
 }
 
-@media only screen and (max-width: 320px) {
+@media (min-width: 992px) {
   .highlights {
-    background-image: url("../assets/images/highlightsm.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 18rem;
-    position: absolute;
-    top: 49rem;
-    right: 19.8rem;
+    width: 70%;
+  }
+  
+  /* Common */
+
+  h4 {
+    font-size: 22px;
   }
 
-  .top-left-head h6 {
-    font-size: 10px;
+  /* Top Box Head */
+
+  .top-left-head h6,
+  .top-right-head h6 {
+    font-size: 20px;
   }
 
   .top-left-head span {
     width: 25%;
-    font-size: 9px;
+    font-size: 20px;
   }
+
   /* Air Pollution */
 
   .wind-icon {
-    font-size: 2.5rem;
+    font-size: 4.5rem;
   }
 
   .air-value span {
-    font-size: 9px;
+    font-size: 16px;
   }
   .air-value h3 {
-    font-size: 16px;
+    font-size: 35px;
   }
 
   /* SunRise & Sunset Time */
 
-  .sunset {
-    margin-left: 0.2rem;
-  }
-
-  .top-right-head h6 {
-    font-size: 10px;
-  }
-
   .icon {
-    font-size: 2.4rem;
+    font-size: 4.5rem;
   }
-
-  .sunrise-time,
-  .sunset-time {
-    margin-left: 0.2rem;
+  .sunrise-time span,
+  .sunset-time span {
+    font-size: 18px;
   }
   .sunrise-time h3,
   .sunset-time h3 {
-    font-size: 0.8rem;
+    font-size: 2.6rem;
     font-weight: 300;
   }
 
   /* Bottom Box */
 
   .bottom-higlights {
+    width: fit-content;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 0.5rem;
-  }
-
-  .humidity,
-  .pressure,
-  .visibility,
-  .feels-like,
-  .wind {
-    padding: 0.3rem;
-    width: 100%;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .humidity h5,
@@ -597,28 +648,114 @@ h4 {
   .visibility h5,
   .feels-like h5,
   .wind h5 {
-    font-size: 12px;
+    font-size: 18px;
   }
 
   .logo {
-    font-size: 1.5rem;
+    font-size: 3.6rem;
   }
 
   .image-icon {
-    width: 32px;
-    height: 32px;
+    width: 60px;
+    height: 60px;
   }
 
   .hum-value span,
   .pressure-value span,
   .visi-value span,
   .feels-like span {
-    font-size: 1rem;
-    font-weight: 300;
+    font-size: 1.8rem;
   }
 
   .wind span {
-    font-size: 0.9rem;
+    font-size: 1.7rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .highlights {
+    width: 70%;
+  }
+  
+  /* Common */
+
+  h4 {
+    font-size: 22px;
+  }
+
+  /* Top Box Head */
+
+  .top-left-head h6,
+  .top-right-head h6 {
+    font-size: 20px;
+  }
+
+  .top-left-head span {
+    width: 25%;
+    font-size: 20px;
+  }
+
+  /* Air Pollution */
+
+  .wind-icon {
+    font-size: 4.5rem;
+  }
+
+  .air-value span {
+    font-size: 16px;
+  }
+  .air-value h3 {
+    font-size: 35px;
+  }
+
+  /* SunRise & Sunset Time */
+
+  .icon {
+    font-size: 4.5rem;
+  }
+  .sunrise-time span,
+  .sunset-time span {
+    font-size: 18px;
+  }
+  .sunrise-time h3,
+  .sunset-time h3 {
+    font-size: 2.6rem;
     font-weight: 300;
+  }
+
+  /* Bottom Box */
+
+  .bottom-higlights {
+    width: fit-content;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .humidity h5,
+  .pressure h5,
+  .visibility h5,
+  .feels-like h5,
+  .wind h5 {
+    font-size: 18px;
+  }
+
+  .logo {
+    font-size: 3.6rem;
+  }
+
+  .image-icon {
+    width: 60px;
+    height: 60px;
+  }
+
+  .hum-value span,
+  .pressure-value span,
+  .visi-value span,
+  .feels-like span {
+    font-size: 1.8rem;
+  }
+
+  .wind span {
+    font-size: 1.7rem;
   }
 }
