--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-image: url(../src/assets/images/sky_bg.jpg);
+  background-image: url(../src/assets/images/md-bg.png);
   background-size: cover;
   color: rgb(45, 45, 45);
 }
