--- a/src/styles/forecast.css
+++ b/src/styles/forecast.css
@@ -43,17 +43,17 @@ h6 {
 }
 
 @media (max-width: 575.98px) {
-  .forecast-box{
+  .forecast-box {
     width: 95%;
     border-radius: 10px;
     position: absolute;
     top: 60rem;
     left: 0.5rem;
-    height: fit-content;
+    height: 50%;
   }
 
   .forecast-container {
-    height: 15rem;
+    height: 100%;
     border-radius: 10px;
     overflow-y: scroll;
   }
@@ -62,7 +62,7 @@ h6 {
     align-items: center;
   }
 
-  .desc{
+  .desc {
     display: flex;
     justify-content: space-between;
     margin-left: 2rem;
@@ -70,30 +70,29 @@ h6 {
 
   .image-temp img {
     width: 2.5rem;
-    height:2.5rem;
+    height: 2.5rem;
   }
-  
+
   .image-temp h5 {
     font-size: 1rem;
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
-  
+
   .forecast-days span {
     font-size: 15px;
   }
 }
 
 @media (min-width: 576px) {
-  .forecast-box{
+  .forecast-box {
     width: 85%;
     border-radius: 10px;
-    height: 80%;
+    height: 100%;
   }
 
   .forecast-container {
-    height: 47.5%;
+    height: 52%;
     border-radius: 10px;
-    overflow-y: scroll;
   }
 
   .forecast-days {
@@ -101,7 +100,7 @@ h6 {
     padding: 0.2rem;
   }
 
-  .desc{
+  .desc {
     display: flex;
     justify-content: space-between;
     margin-left: 0.5rem;
@@ -109,36 +108,40 @@ h6 {
 
   .image-temp img {
     width: 2.3rem;
-    height:2.3rem;
+    height: 2.3rem;
+    margin-bottom: 0;
   }
-  
+
   .image-temp h5 {
     font-size: 0.9rem;
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
-  
+
   .forecast-days span {
     font-size: 12px;
   }
 }
 
 @media (min-width: 768px) {
-  .forecast-box{
+  .forecast-box {
     position: relative;
     top: 0rem;
     left: 0rem;
     width: 100%;
-    height: 60%;
+    height: 49%;
     border-radius: 10px;
   }
 
   .forecast-container {
-    height: 65%;
+    height: 100%;
     background-position-y: 0rem;
-    overflow-y: scroll;
   }
 
-  .desc{
+  .forecast-days {
+    margin-top: 0.3rem;
+  }
+
+  .desc {
     display: flex;
     justify-content: space-between;
     margin-left: 1rem;
@@ -148,70 +151,90 @@ h6 {
     width: 1.8rem;
     height: 1.8rem;
   }
-  
+
   .image-temp h5 {
     font-size: 1rem;
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
 
   .forecast-days {
     padding: 0.5rem;
   }
-  
+
   .forecast-days span {
     font-size: 13px;
   }
-} 
+}
 
 @media (min-width: 992px) {
-  .forecast-box{
+  .forecast-box {
     width: 100%;
-    height: 64%;
+    height: 45%;
+  }
+
+  .forecast-container {
+    height: 100%;
+  }
+
+  .forecast-days {
+    margin: 0.5rem 0 0 0;
   }
 
   .image-temp img {
     width: 1.8rem;
     height: 1.8rem;
-  }
-  
-  .image-temp h5 {
-    font-size: 1rem;
-    margin-right: .5rem;
+    margin-bottom: 0;
   }
 
-  .desc{
+  .image-temp h5 {
+    font-size: 1rem;
+    margin-right: 0.5rem;
+  }
+
+  .desc {
     display: flex;
     justify-content: space-between;
-    margin-left: 1rem;
+    margin-left: 0.3rem;
   }
-  
-  
+
   .forecast-days span {
     font-size: 15px;
   }
-} 
+}
 
 @media (min-width: 1200px) {
-  .forecast-box{
+  .forecast-box {
     width: 120%;
-    
+    height: fit-content;
+  }
+
+  .forecast-container {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-position-y: -10rem;
+  }
+
+  .forecast-days {
+    margin-top: 0rem;
   }
 
   .image-temp img {
     width: 2.5rem;
     height: 2.5rem;
+    margin-bottom: 0;
   }
-  
+
   .image-temp h5 {
     font-size: 1.2rem;
   }
 
-  .desc{
+  .desc {
     display: flex;
     justify-content: space-between;
     margin-right: 1.5rem;
   }
-  
+
   .desc span {
     font-size: 14px;
   }
