--- a/src/styles/maincontainer.css
+++ b/src/styles/maincontainer.css
@@ -1,8 +1,8 @@
 .box {
   padding: 0 1rem 0 1rem;
-  height: fit-content;
+  height: 100%;
   overflow-y: hidden;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .sub-container {
