--- a/src/styles/maincontainer.css
+++ b/src/styles/maincontainer.css
@@ -1,8 +1,7 @@
 .box {
   padding: 0 1rem 0 1rem;
-  height: 100%;
-  overflow-y: hidden;
-  /* overflow-x: hidden; */
+  height: fit-content;
+  overflow-x: hidden;
 }
 
 .sub-container {
